--- a/Java_Tutorials/Overview.html
+++ b/Java_Tutorials/Overview.html
@@ -44,9 +44,18 @@
                        and writing your first program. If you are already past all of this feel free to move to the next section.
                     </p>
                 </div>
-                <div class="btn-group">
-                  <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">Next ></a>
-                </div>
+                <div class="row">
+                   <div class="col-sm-11"> 
+                      <div class="btn-group">
+                        <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">Next ></a>
+                      </div>
+                    </div>
+                    <div class="col-sm-12"> 
+                      <div class="btn-group">
+                        <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">Next ></a>
+                      </div>
+                    </div>  
+                </div>    
             </div>
         </body>
         
