--- a/Java_Tutorials/Why_Java.html
+++ b/Java_Tutorials/Why_Java.html
@@ -1,1 +1,52 @@
+<html lang="en">
+    <title>Something Clever</title>
+        <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
 
+          <!-- Bootstrap -->
+          <link href="../css/bootstrap.min.css" rel="stylesheet">
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <!-- Include all compiled plugins (below), or include individual files as needed -->
+          <script src="../js/bootstrap.min.js"></script>
+
+        </head>
+        <body>
+            <div class="jumbotron" style="background-color:#99bbff;">
+              <h1 style="padding-left:30px;">Why Java?</h1>
+            </div>  
+             <div class="container"> 
+               <div class="btn-group btn-group-lg btn-group-justified">
+                    <a href="https://www.matthewlydigsen.com" class="btn btn-primary" role="button">Home</a>
+                    <a href="https://www.matthewlydigsen.com/java.html" class="btn btn-primary" role="button">Java Directory</a>
+                  </div>
+             </div>
+            <div class="container">   
+                <div class="well">
+                    <h2><b>Answer</b></h2>
+                    <p style="line-height: 1.8;">Well there is no exact answer. Every language you will learn is different and has
+                    strengths and weaknesses. Javascript is great for programming websites, C++ is used for a lot of graphics based
+                    coding. So what are java's strengths. Well Java, unlike most languages, catches a lot of errors before you run your
+                    code so you can get use to java's syntax more quickly and catch errors more easily. Java is also relatively easy
+                    to learn and uses Object Oriented Programming (which will be discussed in greater detail in a later section). 
+                    Java is also transferable between almost any computer so whether you are working on a pc or a mac you will be able
+                    to run the same program. These reasons make java a great language to learn first. </p>
+                </div>
+                <div class="well">
+                    <h2><b>Personal Experience</b></h2>
+                    <p style="line-height: 1.8;"> I myself have been working with java for about 7 years now so most of my experience
+                    is with java. I have experience with other languages but java is by far my most skilled language so I will
+                    be a ble to show you the ins and outs of this language in great detail.
+                    </p>  
+                </div>
+                <div class="btn-group">
+                  <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">Next ></a>
+                </div>
+            </div>
+ 
+                
+        </body>
+        
+</html>
