--- a/Java_Tutorials/Download.html
+++ b/Java_Tutorials/Download.html
@@ -29,9 +29,11 @@
                     <p style="line-height: 1.8;"> The first thing to do is to actually download java for your machine. To do this
                     click on the image below and simply run the exe file when is downloaded. Follow the instructions and then
                     you will have java on your machine. </p>
-                    <a href="http://www.java.com/en/download/win8.jsp" target="_blank">
-                      <img src="images/javadownload.png" class="img-responsive" style="width:200px;height:75px;">
-                    </a>
+                    <center>
+                      <a href="http://www.java.com/en/download/win8.jsp" target="_blank">
+                        <img src="images/javadownload.png" class="img-responsive" style="width:200px;height:75px;">
+                      </a>
+                    </center>  
                 </div>
                 <div class="well">
                     <h2><b>How to use Java</b></h2>
