--- a/Java_Tutorials/Download.html
+++ b/Java_Tutorials/Download.html
@@ -40,7 +40,7 @@
                     <p style="line-height: 1.8;"> Now that you have java the question becomes how do you actually write code and
                     use java. Well you can use command line which I will have a section on in the advanced topics section. But I
                     imagine many of the people reading this aren't familiar with command line so we will download an Integrated
-                    Development Enviorment (IDE). Two popular java IDE's are Netbeans and Eclipse, you can also use Dr. Java but
+                    Development Environment (IDE). Two popular java IDE's are Netbeans and Eclipse, you can also use Dr. Java but
                     I personally like Eclipse and it has a lot of nice features which I will go through in later sections. 
                     </p>  
                 </div>
@@ -49,10 +49,24 @@
                     <h2><b>What is an IDE</b></h2>
                     <p style="line-height: 1.8;">
                       In the last section I mentioned the term IDE so I thought I give a brief explanation of what that is since no one
-                      told me. 
+                      told me. So an IDE is a really nice platform that allows us software developers to develop code more easily.
+                      IDE's like Eclipse come with a lot of features such a compiler, interpreter, debugger, and one of the nicest
+                      features in my opinion is intelligent code compeletion, which is just a fancy way of saying the program will
+                      give you a list of possible things you can type in so if you forgot how to type something or the correct syntax
+                      it will auto complete it. IDE's make life a lot easier for programmers which is why we are going to download
+                      one so that you can focus more on learning how to program instead of having to learn a bunch of command line
+                      codes that will make life a lot more difficult. Like I said Eclipse is my personal favorite environment so
+                      I will show you how to download and set up Eclipse.
                     </p>
                 </div>    
                     
+                <div class="well">
+                    <h2><b>Download Eclipse</b></h2>
+                    <p style="line-height: 1.8;"> First you want to go to this site <a href="https://eclipse.org/downloads/" 
+                    target="_blank">here </a>. Follow the instructions to download eclipse on whatever machine you are using. When 
+                    eclipse is all set up opeen it up and now we must choose the working directory.
+                    </p>        
+                </div>    
                 <div class="btn-group">
                   <a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html" class="btn btn-primary" role="button">< Prev</a>
                   <a href="https://www.matthewlydigsen.com/Java_Tutorials/Download.html" class="btn btn-primary" role="button">Next ></a>
