--- a/Java_Tutorials/Download.html
+++ b/Java_Tutorials/Download.html
@@ -68,8 +68,8 @@
                     </p>        
                 </div>    
                 <div class="btn-group">
-                  <a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html" class="btn btn-primary" role="button">< Prev</a>
-                  <a href="https://www.matthewlydigsen.com/Java_Tutorials/Download.html" class="btn btn-primary" role="button">Next ></a>
+                  <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">< Prev</a>
+                  <a href="https://www.matthewlydigsen.com/Java_Tutorials/OOP.html" class="btn btn-primary" role="button">Next ></a>
                 </div>
             </div>
  
