--- a/java.html
+++ b/java.html
@@ -73,6 +73,8 @@
                     <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Inheritance.html">Inheritance</a></li>
                     <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Design_Patterns.html">Design Patterns</a></li>
                     <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Threads.html">Threads</a></li>
+                    <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Debugger.html">Debugger</a></li>
+                    <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Terminal.html">Running Java Through Terminal</a></li>
                   </ul>
               </div>
             </div>
