--- a/Java_Tutorials/OOP.html
+++ b/Java_Tutorials/OOP.html
@@ -43,9 +43,9 @@
                       Oreinted Programming has limitless capabilites and you should get more familiar with it because it is used all
                       of the time and will only become more popular.
                     </p>  
-                    <center>
+                    <!--<center>
                       <img src="../images/javadownload.png" class="img-responsive" style="width:300px;height:65px;">
-                    </center>  
+                    </center>-->  
                 </div>
 
                 <div class="btn-group">
