--- a/Interests.html
+++ b/Interests.html
@@ -86,7 +86,7 @@
                one below is a lot cooler than some simple text on a screen</p>
                <br>
                <center>
-                <img src="images/teapots.jpg" class="img-responsive" style="width:600px;height:600px;">
+                <img src="images/teapots.jpg" class="img-responsive" width = "600" height = "600">
                 <br><br>
                 <p> <font color="grey"> These teapots were rendered using a shader I made in Sunflow </font></p>
                </center>    
