--- a/java.html
+++ b/java.html
@@ -20,7 +20,7 @@
             
              <div class="container"> 
              <center>
-             <img src="images/javalogo.jpg" class="img-responsive" style="width:650px;height:450px;">
+             <img src="images/javalogo.jpg" class="img-responsive" width = "650" height = "450">
              </center>
                <div class="btn-group btn-group-lg btn-group-justified">
                     <a href="https://www.matthewlydigsen.com" class="btn btn-primary" role="button">Home</a>
