--- a/java.html
+++ b/java.html
@@ -65,7 +65,7 @@
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Enum.html">Enumerated Types</a></li>
                 </ul>
               </div>
-              <div class="col-sm-4" style="background-color:lavender;">
+              <div class="col-sm-4" style="background-color:lavenderblush;">
                 <center>
                   <h2>Advanced Topics</h2>
                 </center>
