--- a/java.html
+++ b/java.html
@@ -53,7 +53,7 @@
                 </ul>
                 
               </div>
-              <div class="col-sm-4" style="background-color:lavender;"> <!--border-right: 1px solid #ccc;-->
+              <div class="col-sm-4" style="background-color:lavenderblush;"> <!--border-right: 1px solid #ccc;-->
                 <center>
                   <h2>Some Experience</h2>
                 </center>
@@ -65,7 +65,7 @@
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Enum.html">Enumerated Types</a></li>
                 </ul>
               </div>
-              <div class="col-sm-4" style="background-color:lavenderblush;">
+              <div class="col-sm-4" style="background-color:lavender;">
                 <center>
                   <h2>Advanced Topics</h2>
                 </center>
