--- a/java.html
+++ b/java.html
@@ -40,7 +40,7 @@
              </div>
           <div class="container" style="background-color:lavender;>   
             <div class="row">
-              <div class="col-sm-4" style="background-color:lavender; "><!--border-right: 1px solid #ccc;-->
+              <div class="col-sm-4" style="background-color:lavender; border-right: 1px;"><!--border-right: 1px solid #ccc;-->
                 <center>  
                   <h2>Just Starting Out </h2>
                 </center>
