--- a/Current_Work.html
+++ b/Current_Work.html
@@ -61,7 +61,7 @@
                and nodejs to store all of the data in our system. This is our logo:</p>
                <br>
                <center>
-                <img src="images/dropoutlogo.png" class="img-responsive" style="width:350px;height:400px;">
+                <img src="images/dropoutlogo.png" class="img-responsive" width = "350" height = "400">
                 </center>
                <br>
             </div>
