--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
              </div>-->
           <div class="container">   
                  <div class="btn-group btn-group-lg btn-group-justified">
-                       <div class="btn-group btn-group-lg">
+                       <!--<div class="btn-group btn-group-lg">
                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                               Programming <span class="caret"></span></button>
                               <ul class="dropdown-menu" role="menu">
@@ -40,7 +40,7 @@
                                 <li><a href="python.html">Python</a></li>
                                 <li><a href="javascript.html">Javascript</a></li>
                               </ul>
-                        </div>  
+                        </div>-->  
                         <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
                         <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
                         <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
