--- a/Current_Work.html
+++ b/Current_Work.html
@@ -20,7 +20,7 @@
              <div class="container"> 
                <div class="btn-group btn-group-lg btn-group-justified">
                     <a href="index.html" class="btn btn-primary" role="button">Home</a>
-                    <div class="btn-group btn-group-lg">
+                    <!--<div class="btn-group btn-group-lg">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                       Programming <span class="caret"></span></button>
                       <ul class="dropdown-menu" role="menu">
@@ -29,7 +29,7 @@
                         <li><a href="Python.html">Python</a></li>
                         <li><a href="javascript.html">Javascript</a></li>
                       </ul>
-                     </div> 
+                     </div>--> 
                     <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
                     <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
                   </div>
