--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-sm-2">
                         <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
-                            <img src="images/profilepicture.jpg" class="img-rounded,img-responsive" width="155" height = "125" style="padding-left:30px;">
+                            <img src="images/profilepicture.jpg" class="img-circle,img-responsive" width="155" height = "125" style="padding-left:30px;">
                         </a>
                     </div>
                 </div>
