--- a/Interests.html
+++ b/Interests.html
@@ -40,12 +40,17 @@
               <h2><b>FIRST Robotics</b></h2>
               <br>
               <!--width="560"-->
-              <div class="col-md-12">
+              <!--<div class="col-md-12">
                 <center>    
                   <iframe class="col-sm-12" height="415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                    frameborder="0" allowfullscreen ></iframe>
                 </center>   
-              </div>
+              </div>-->
+              <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+                   frameborder="0" allowfullscreen ></iframe>
+              </div> 
+              
               <p>.</p>
                <p style="line-height: 1.8;">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
                 one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
