--- a/Interests.html
+++ b/Interests.html
@@ -46,8 +46,8 @@
                    frameborder="0" allowfullscreen ></iframe>
                 </center>   
               </div>-->
-              <div class="embed-responsive embed-responsive-14by8">
-                  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+              <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" width = "600" height = "415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                    frameborder="0" allowfullscreen ></iframe>
               </div> 
               
