--- a/Interests.html
+++ b/Interests.html
@@ -14,6 +14,14 @@
           <script src="js/bootstrap.min.js"></script>
 
         </head>
+        <style>
+            @media all and ( min-width: 560px) {
+                .div_style { 
+                    width:560px;
+                    padding-bottom:315px !important;
+                }
+            }
+        </style>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
               <h1 style="padding-left:30px;">Interests</h1>
@@ -46,8 +54,8 @@
                    frameborder="0" allowfullscreen ></iframe>
                 </center>   
               </div>-->
-              <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width = "600" height = "415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+              <div class="embed-responsive embed-responsive-16by9 div_style">
+                  <iframe class="embed-responsive-item" width = "560" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                    frameborder="0" allowfullscreen ></iframe>
               </div> 
               
