--- a/Interests.html
+++ b/Interests.html
@@ -15,9 +15,9 @@
 
         </head>
         <style>
-            @media all and ( min-width: 560px) {
+            @media all and ( min-width: 640px) {
                 .div_style { 
-                    width:560px;
+                    width:640px;
                     padding-bottom:315px !important;
                 }
             }
@@ -55,8 +55,10 @@
                 </center>   
               </div>-->
               <div class="embed-responsive embed-responsive-16by9 div_style">
-                  <iframe class="embed-responsive-item" width = "560" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
-                   frameborder="0" allowfullscreen ></iframe>
+                  <center>
+                      <iframe class="embed-responsive-item" width = "640" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+                       frameborder="0" allowfullscreen ></iframe>
+                   </center>
               </div> 
               
               <p>.</p>
