--- a/Interests.html
+++ b/Interests.html
@@ -59,7 +59,7 @@
                       <iframe class="embed-responsive-item" width = "640" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                        frameborder="0" allowfullscreen ></iframe>
                 </div> 
-              <center>
+              </center>
               <br>      
               <p>.</p>
                <p style="line-height: 1.8;">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
