--- a/Interests.html
+++ b/Interests.html
@@ -18,7 +18,7 @@
             @media all and ( min-width: 640px) {
                 .div_style { 
                     width:640px;
-                    padding-bottom:315px !important;
+                    padding-bottom:415px !important;
                 }
             }
         </style>
@@ -56,12 +56,11 @@
               </div>-->
               <center>
                 <div class="embed-responsive embed-responsive-16by9 div_style">
-                      <iframe class="embed-responsive-item" width = "640" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+                      <iframe class="embed-responsive-item" width = "640" height = "415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                        frameborder="0" allowfullscreen ></iframe>
                 </div> 
               </center>
               <br>      
-              <p>.</p>
                <p style="line-height: 1.8;">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
                 one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
                 heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
