--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
           <script src="js/bootstrap.min.js"></script>
 
         </head>
+        <style>
+        .jumbotron_background {
+            position: relative;
+            background: #000 url("images/profilepicture.png") center center;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            overflow: hidden;
+        }
+        </style>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;"><!--99bbff-->
                 <div class="row">
@@ -26,10 +36,8 @@
                     </div>
                 </div>
             </div>  
-           <!--  <div class="container"> 
-              
-             </div>-->
-          <div class="container">   
+          
+          <div class="jumbotron_background">   
                  <div class="btn-group btn-group-lg btn-group-justified">
                        <!--<div class="btn-group btn-group-lg">
                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
