--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 </div>
             </div>  
           
-          <div class="jumbotron_background">   
+          <div class="jumbotron_background">  
+                <div class="container">
                  <div class="btn-group btn-group-lg btn-group-justified">
                        <!--<div class="btn-group btn-group-lg">
                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
@@ -80,6 +81,7 @@
                Feel free to send me an email at mlydigsen@umass.edu.
                </p>
             </div>
+          </div>
           </div>
         </body>
         <footer>
