--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             width: 100%;
             height: 100%;
             background-size: cover;
-
+            overflow: hidden;
         }
         </style>
         <div class="jumbotron_background">  
