--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <style>
         .jumbotron_background {
             position: relative;
-            background: #000 url("images/profilepicture.png") center center;
+            background: #9393B8 center center;
             width: 100%;
             height: 100%;
             background-size: cover;
-            overflow: hidden;
+            background-repeat: repeat-y;
         }
         </style>
         <div class="jumbotron_background">  
