--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <style>
         .jumbotron_background {
             position: relative;
-            background: #9393B8 center center;
+            background: #0099cc center center;
             width: 100%;
             height: 100%;
             background-repeat: repeat-y;
