--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <style>
         .jumbotron_background {
             position: relative;
-            background: #ccccff center center;
+            background: #80ccff center center;
             background-repeat: repeat-y;
         }
         </style>
         <div class="jumbotron_background">  
         <body>
-            <div class="jumbotron" style="background-color:#99bbff;"><!--99bbff-->
+            <div class="jumbotron" style="background-color:#336699;"><!--99bbff-->
                 <div class="row">
                     <div class="col-sm-10">
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
