--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background-repeat: repeat-y;
         }
         </style>
-        <div class="jumbotron_background">  
+        <div class="jumbotron" style="background-color:#20202d;"> <!-- class="jumbotron_background" -->  
         <body>
             <div class="jumbotron" style="background-color:#99bbff;"><!--99bbff-->
                 <div class="row">
