--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <style>
         .jumbotron_background {
             position: relative;
-            background: #20202d center center;
+            background: #003300 center center;
             background-repeat: repeat-y;
         }
         </style>
