--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                    but it has been primarily work with javascript and database languages including postgresql and mongodb. This
                    site allows me to gain experience in the frontend side of web development. This website also allows me to show
                    in great depth my experience with multiple programming languages which can be seen in the programming knowledge tab.
-                   </p>
+                   (In progress)</p>
                 </div>
                 <div class="well">
                   <h2><b>Contact me</b></h2>
