--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <style>
         .jumbotron_background {
             position: relative;
-            background:  url("images/backgroun.jpg") center center;
+            background:  url("images/background.jpg") center center;
             background-repeat: repeat;
         }
         </style>
