--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </style>
         <div class="jumbotron_background">   
         <body>
-            <div class="jumbotron" style="background-image: url('images/header.jpg');"><!--background-color:99bbff;-->
+            <div class="jumbotron" style="background-color: #7799dd"><!--background-color:99bbff;-->
                 <div class="row">
                     <div class="col-sm-10">
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
