--- a/Projects.html
+++ b/Projects.html
@@ -34,7 +34,7 @@
                     <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                   </div>
              </div>
-          <div class="container">  
+          <!--<div class="container"> --> 
             <div class="row">
                <div class="col-sm-8">    
                 <div class="well">
@@ -69,7 +69,7 @@
                 </div>
               </div>    
             <div>
-          </div>
+         <!-- </div>-->
               
         </body>
         
