--- a/Projects.html
+++ b/Projects.html
@@ -17,7 +17,9 @@
             <div class="jumbotron" style="background-color:#99bbff;">
               <h1 style="padding-left:30px;">Projects</h1>
             </div>  
-             <div class="container"> 
+        <div class="row">
+         <div class="col-sm-8">   
+             <!--<div class="container">--> 
                <div class="btn-group btn-group-lg btn-group-justified">
                     <a href="index.html" class="btn btn-primary" role="button">Home</a>
                     <!--<div class="btn-group btn-group-lg">
@@ -33,10 +35,8 @@
                     <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
                     <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                   </div>
-             </div>
+             <!--</div>-->
           <!--<div class="container"> --> 
-            <div class="row">
-               <div class="col-sm-8">    
                 <div class="well">
                   <h2><b>Downtime Capture System</b></h2>
                    <p style="line-height: 1.8;">This was a Downtime Capture System, using a Raspberry pi, I created to measure when a factory machine stopped 
