--- a/Projects.html
+++ b/Projects.html
@@ -83,7 +83,7 @@
                       </center>
                   </div>
                 </footer>  
-            <div>
+            </div>
          <!-- </div>-->
               
         </body>
