--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,20 @@
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
               <h1 style="padding-left:30px;">Projects</h1>
-            </div>  
+            </div>
+            <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                <div class="navbar-header">
+                  <a class="navbar-brand" href="#">WebSiteName</a>
+                </div>
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">Page 1</a></li>
+                  <li><a href="#">Page 2</a></li>
+                  <li><a href="#">Page 3</a></li>
+                </ul>
+              </div>
+            </nav>
         <div class="row">
          <div class="col-sm-6">   
              <!--<div class="container">--> 
