--- a/Projects.html
+++ b/Projects.html
@@ -17,7 +17,7 @@
             <div class="jumbotron" style="background-color:#99bbff;">
               <h1 style="padding-left:30px;">Projects</h1>
             </div>
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-inverse">
               <div class="container-fluid">
                 <div class="navbar-header">
                   <a class="navbar-brand" href="#">WebSiteName</a>
