--- a/Projects.html
+++ b/Projects.html
@@ -14,7 +14,7 @@
 
         </head>
         <body>
-            <div class="jumbotron" style="background-color:#99bbff;">
+            <div class="jumbotron" style="background-color:#99bbff; padding-bottom:0px">
               <h1 style="padding-left:30px;">Projects</h1>
             </div>
             <nav class="navbar navbar-inverse">
