--- a/Projects.html
+++ b/Projects.html
@@ -13,13 +13,19 @@
           <script src="js/bootstrap.min.js"></script>
 
         </head>
+        <style>
+        .navbar-custom {
+            color: #FFFFFF;
+            background-color: #CC3333;
+        }
+        </style>
         <body>
             <div class="jumbotron" style="background-color:#99bbff; margin-bottom:0px">
               <h1 style="padding-left:30px;">Projects</h1>
             </div>
             <nav class="navbar navbar-inverse">
               <div class="container-fluid">
-                <div class="navbar-header">
+                <div class="navbar-header navbar-custom">
                   <a class="navbar-brand" href="#">WebSiteName</a>
                 </div>
                 <ul class="nav navbar-nav">
