--- a/Projects.html
+++ b/Projects.html
@@ -23,9 +23,9 @@
             <div class="jumbotron" style="background-color:#99bbff; margin-bottom:0px">
               <h1 style="padding-left:30px;">Projects</h1>
             </div>
-            <nav class="navbar navbar-inverse">
+            <nav class="navbar navbar-default navbar-custom">
               <div class="container-fluid">
-                <div class="navbar-header navbar-custom">
+                <div class="navbar-header">
                   <a class="navbar-brand" href="#">WebSiteName</a>
                 </div>
                 <ul class="nav navbar-nav">
