--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,7 @@
         <style>
         .navbar-custom {
             color: #FFFFFF;
-            background-color: #CC3333;
+            background-color: #006dcc;
         }
         </style>
         <body>
