--- a/Projects.html
+++ b/Projects.html
@@ -14,7 +14,7 @@
 
         </head>
         <body>
-            <div class="jumbotron" style="background-color:#99bbff; margin-bottom:0px;">
+            <div class="jumbotron" style="background-color:#99bbff; ">
               <h1 style="padding-left:30px;">Projects</h1>
             </div>
         <div class="row">
