--- a/Projects.html
+++ b/Projects.html
@@ -20,7 +20,7 @@
         <div class="row">
          <div class="col-sm-6">   
              <!--<div class="container">--> 
-                 <div class="btn-group btn-group-lg btn-group-justified">
+                 <!--<div class="btn-group btn-group-lg btn-group-justified">
                     <a href="index.html" class="btn btn-primary" role="button">Home</a>
                     <!--<div class="btn-group btn-group-lg">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
@@ -32,9 +32,22 @@
                         <li><a href="javascript.html">Javascript</a></li>
                       </ul>
                      </div>--> 
-                    <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
+                    <!--<a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
                     <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
+                  </div>-->
+                <nav class="navbar navbar-inverse">
+                  <div class="container-fluid">
+                    <div class="navbar-header">
+                      <a class="navbar-brand" href="#">WebSiteName</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                      <li class="active"><a href="#">Home</a></li>
+                      <li><a href="#">Page 1</a></li>
+                      <li><a href="#">Page 2</a></li> 
+                      <li><a href="#">Page 3</a></li> 
+                    </ul>
                   </div>
+                </nav>
              
              <!--</div>-->
           <!--<div class="container"> --> 
