--- a/Projects.html
+++ b/Projects.html
@@ -14,9 +14,23 @@
 
         </head>
         <body>
-            <div class="jumbotron" style="background-color:#99bbff; ">
+            <div class="jumbotron" style="background-color:#99bbff; margin-bottom:0px;">
               <h1 style="padding-left:30px;">Projects</h1>
             </div>
+                
+                <nav class="navbar navbar-inverse">
+                  <div class="container-fluid">
+                    <div class="navbar-header">
+                      <a class="navbar-brand" href="#">WebSiteName</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                      <li class="active"><a href="#">Home</a></li>
+                      <li><a href="#">Page 1</a></li>
+                      <li><a href="#">Page 2</a></li> 
+                      <li><a href="#">Page 3</a></li> 
+                    </ul>
+                  </div>
+                </nav>
         <div class="row">
          <div class="col-sm-6">   
              <!--<div class="container">--> 
@@ -35,19 +49,6 @@
                     <!--<a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
                     <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                   </div>-->
-                <nav class="navbar navbar-inverse">
-                  <div class="container-fluid">
-                    <div class="navbar-header">
-                      <a class="navbar-brand" href="#">WebSiteName</a>
-                    </div>
-                    <ul class="nav navbar-nav">
-                      <li class="active"><a href="#">Home</a></li>
-                      <li><a href="#">Page 1</a></li>
-                      <li><a href="#">Page 2</a></li> 
-                      <li><a href="#">Page 3</a></li> 
-                    </ul>
-                  </div>
-                </nav>
              
              <!--</div>-->
           <!--<div class="container"> --> 
