--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </style>
         <div class="jumbotron_background">   
         <body>
-            <div class="jumbotron" style="background-color: #7799dd">
+            <div class="jumbotron" style="background-color: #7799dd margin-bottom:0px;">
                 <div class="row">
                     <div class="col-sm-10">
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
@@ -34,7 +34,16 @@
                     </div>
                 </div>
             </div>  
-            
+             <nav class="navbar navbar-inverse">
+                  <div class="container-fluid">
+                    <ul class="nav navbar-nav">
+                      <li class="active"><a href="#">Home</a></li>
+                      <li><a href="#">Page 1</a></li>
+                      <li><a href="#">Page 2</a></li> 
+                      <li><a href="#">Page 3</a></li> 
+                    </ul>
+                  </div>
+                </nav>
              <div class="container">
                  <div class="btn-group btn-group-lg btn-group-justified">
                        <!--<div class="btn-group btn-group-lg">
