--- a/index.html
+++ b/index.html
@@ -34,15 +34,23 @@
                     </div>
                 </div>
             </div>  
-             <nav class="navbar navbar-inverse">
+
+             <nav class="navbar navbar-inverse navbar-toggle" data-toggle="collapse"  id = "myNavbar">
                   <div class="container-fluid">
-                    <ul class="nav navbar-nav">
-                      <li class="active"><a href="#">Home</a></li>
-                      <li><a href="#">Page 1</a></li>
-                      <li><a href="#">Page 2</a></li> 
-                      <li><a href="#">Page 3</a></li> 
-                    </ul>
-                  </div>
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>                        
+                        </button>
+                      <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav">
+                          <li class="active"><a href="#">Home</a></li>
+                          <li><a href="#">Page 1</a></li>
+                          <li><a href="#">Page 2</a></li> 
+                          <li><a href="#">Page 3</a></li> 
+                        </ul>
+                      </div>    
+                   </div>
                 </nav>
              <div class="container">
                  <div class="btn-group btn-group-lg btn-group-justified">
