--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>  
 
-             <nav class="navbar navbar-inverse navbar-toggle" data-toggle="collapse"  id = "myNavbar">
+             <nav class="navbar navbar-inverse">
                   <div class="container-fluid">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
