--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                    </div>
                 </nav>
              <div class="container">
-                 <div class="btn-group btn-group-lg btn-group-justified">
+                 <!--<div class="btn-group btn-group-lg btn-group-justified">
                        <!--<div class="btn-group btn-group-lg">
                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                               Programming <span class="caret"></span></button>
@@ -64,10 +64,10 @@
                                 <li><a href="javascript.html">Javascript</a></li>
                               </ul>
                         </div>-->  
-                        <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
+                        <!--<a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
                         <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
                         <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
-                 </div>
+                 </div>-->
               
                 <div class="well">
                   <h2><b>About me</b></h2>
