--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </style>
         <div class="jumbotron_background">   
         <body>
-            <div class="jumbotron" style="background-color: #7799dd; margin-bottom:0px;">
+            <div class="jumbotron" style="background-color: #7799dd;">
                 <div class="row">
                     <div class="col-sm-10">
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
@@ -35,7 +35,9 @@
                 </div>
             </div>  
 
-             <nav class="navbar navbar-inverse">
+
+             <div class="container">
+                    <nav class="navbar ">
                   <div class="container-fluid">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
@@ -52,7 +54,6 @@
                       </div>    
                    </div>
                 </nav>
-             <div class="container">
                  <!--<div class="btn-group btn-group-lg btn-group-justified">
                        <!--<div class="btn-group btn-group-lg">
                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
