--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
              <div class="container">
-                    <nav class="navbar navbar-default">
+                    <nav class="navbar navbar-default" style="margin-bottom:0px;">
                   <div class="container-fluid">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
