--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         </button>
                       <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
-                          <li class="active"><a href="#">Home</a></li>
-                          <li><a href="#">Page 1</a></li>
-                          <li><a href="#">Page 2</a></li> 
-                          <li><a href="#">Page 3</a></li> 
+                          <li class="active"><a href="index.html">Home</a></li>
+                          <li><a href="Projects.html">Projects</a></li>
+                          <li><a href="Interests.html">Interests</a></li> 
+                          <li><a href="Current_Work.html">Current Work</a></li> 
                         </ul>
                       </div>    
                    </div>
