--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 
              <div class="container">
-                <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
-                  <div class="container-fluid">
+                <nav class="navbar" style="margin-bottom:0px; background-color:#000; border-style: none;">
+                   <div class="container-fluid">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
