--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             background:  url("images/background.jpg") center center;
             background-repeat: repeat;
         }
+        .navbar-custom {
+            font-size: 10px;
+            margin-bottom:0px; 
+            background-color:#000; 
+            border-style: none;
+        }
         </style>
         <div class="jumbotron_background">   
         <body>
@@ -37,7 +43,7 @@
 
 
              <div class="container">
-                <nav class="navbar" style="margin-bottom:0px; background-color:#000; border-style: none;">
+                <nav class="navbar navbar-custom">
                    <div class="container-fluid">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
