--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
           <script src="js/bootstrap.min.js"></script>
 
         </head>
+        
         <style>
-        .jumbotron_background {
-            position: relative;
-            background:  url("images/background.jpg") center center;
-            background-repeat: repeat;
-        }
-        .navbar-custom {
-            font-size: 20px;
-            margin-bottom:0px; 
-            background-color:#000; 
-            border-style: none;
-        }
+            .jumbotron_background {
+                position: relative;
+                background:  url("images/background.jpg") center center;
+                background-repeat: repeat;
+            }
+            .navbar-custom {
+                font-size: 20px;
+                margin-bottom:0px; 
+                background-color:#000; 
+                border-style: none;
+            }
         </style>
+        
         <div class="jumbotron_background">   
         <body>
             <div class="jumbotron" style="background-color: #7799dd;">
@@ -43,7 +45,7 @@
 
 
              <div class="container">
-                <nav class="navbar navbar-custom">
+                <nav class="navbar navbar-default navbar-custom">
                    <div class="container-fluid">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
