--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 background-repeat: repeat;
             }
             .navbar-custom {
-                font-size: 20px;
+                font-size: 16px;
+                font color: blue;
                 margin-bottom:0px; 
                 background-color:#000; 
                 border-style: none;
