--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             }
             .navbar-custom {
                 font-size: 18px;
-                font color: blue;
+                color: blue;
                 margin-bottom:0px; 
                 background-color:#000; 
                 border-style: none;
