--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
              <div class="container">
-                <nav class="navbar navbar-default navbar-custom">
+                <nav class="navbar navbar-inverse navbar-custom">
                    <div class="container-fluid">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
