--- a/Current_Work.html
+++ b/Current_Work.html
@@ -44,10 +44,10 @@
                         </button>
                       <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
-                          <li class="active"><a href="index.html">Home</a></li>
+                          <li><a href="index.html">Home</a></li>
                           <li><a href="Projects.html">Projects</a></li>
                           <li><a href="Interests.html">Interests</a></li> 
-                          <li><a href="Current_Work.html">Current Work</a></li> 
+                          <li class="active"><a href="Current_Work.html">Current Work</a></li> 
                         </ul>
                       </div>    
                    </div>
