--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
         <div class="jumbotron_background">   
         <body>
-            <div class="jumbotron" style="background-color: #7799dd;">
+            <div class="jumbotron" style="background-color: #99bbff;">
                 <div class="row">
                     <div class="col-sm-10">
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
