--- a/index.html
+++ b/index.html
@@ -48,11 +48,16 @@
              <div class="container">
                 <nav class="navbar navbar-inverse navbar-custom">
                    <div class="container-fluid">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <div class="navbar-header">
+                          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>                        
-                        </button>
+                          </button>
+                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
+                            <img src="images/profilepicture.jpg" class="img-responsive" width="155" height = "125" style="padding-left:30px;">
+                          </a>
+                        </div>
                       <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
                           <li class="active"><a href="index.html">Home</a></li>
