--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <span class="icon-bar"></span>                        
                           </button>
                           <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
-                            <img src="images/profilepicture.jpg" class="img-responsive" width="155" height = "125" style="padding-left:30px;">
+                            <img src="images/profilepicture.jpg" class="img-responsive">
                           </a>
                         </div>
                       <div class="collapse navbar-collapse" id="myNavbar">
