--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-sm-2">
                         <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
-                            <img src="images/profilepicture.jpg">
+                            <img src="images/profilepicture.jpg"  width="155" height = "125" style="padding-left:30px;>
                         </a>
                     </div>
                 </div>
@@ -54,7 +54,8 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>                        
                           </button>
-                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
+                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank" 
+                            width="20" height="20">
                             <img src="images/profilepicture.jpg" class="img-responsive">
                           </a>
                         </div>
