--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>                        
                           </button>
-                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank" 
-                            width="20" height="20">
-                            <img src="images/profilepicture.jpg" class="img-responsive">
+                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
+                            <img src="images/profilepicture.jpg" class="img-responsive" width="20" height="20">
                           </a>
                         </div>
                       <div class="collapse navbar-collapse" id="myNavbar">
