--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                             <span class="icon-bar"></span>                        
                           </button>
                           <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
-                            <img src="images/profilepicture.jpg" class="img-responsive" width="25" height="25">
+                            <img src="images/profilepicture.jpg" class="img-responsive" width="25" height="25"
+                                style="margin-top:0px;">
                           </a>
                         </div>
                       <div class="collapse navbar-collapse" id="myNavbar">
