--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>                        
                           </button>
-                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
-                            <img src="images/profilepicture.jpg" class="img-responsive" width="25" height="35"
-                                style="margin-top:0px;">
+                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank"
+                          style="padding:5px;">
+                            <img src="images/profilepicture.jpg" class="img-responsive" width="40" height="40">
                           </a>
                         </div>
                       <div class="collapse navbar-collapse" id="myNavbar">
