--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <div class="col-sm-10">
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
                     </div>
-                    <div class="col-sm-2">
+                    <!--<div class="col-sm-2">
                         <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                             <img src="images/profilepicture.jpg"  width="155" height = "125" style="padding-left:30px;">
                         </a>
-                    </div>
+                    </div>-->
                 </div>
             </div>  
 
