--- a/Projects.html
+++ b/Projects.html
@@ -90,13 +90,17 @@
                 </div>
             </div>  
             <div class="col-sm-6"> 
-                <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+                <center>
+                    <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+                </center>
             </div>
         </div>
-        
+        <br>
         <div class="row">
-            <div class="col-sm-6"> 
-                <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+            <div class="col-sm-6">
+                <center> 
+                    <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+                </center>    
             </div>
            <div class="col-sm-6">       
                 <div class="well">
@@ -107,7 +111,7 @@
                 </div>
            </div>    
         </div>    
-        
+        <br>
         <div class="row">
            <div class="col-sm-6">       
                 <div class="well">
