--- a/Projects.html
+++ b/Projects.html
@@ -80,14 +80,14 @@
              
              <!--</div>-->
           <!--<div class="container"> --> 
-                <div class="well">
+                <!--<div class="well">-->
                   <h2><b>Downtime Capture System</b></h2>
                    <p style="line-height: 1.8;">This was a Downtime Capture System, using a Raspberry pi, I created to measure when a factory machine stopped 
                    functioning. It would index the time that the machine went down by receiving a signal from the machine. 
                    Then a worker could use a GUI i created to record the reasons why the the machine went down. The reasons it could 
                    go down could be updated at any time from an excel spread sheet. Then once the event had been logged it would send
                    the data to a different excel spread sheet that could be downloaded and processed at any time.</p>
-                </div>
+                <!--</div>-->
             </div>  
             <div class="col-sm-6"> 
                 <center>
