--- a/Projects.html
+++ b/Projects.html
@@ -36,7 +36,9 @@
             </div>
                 
         <div class="row" style="background-color:lavender;">
-         <div class="col-sm-6">   
+            <div class="col-sm-1"></div>
+                   
+         <div class="col-sm-5">   
              <nav class="navbar navbar-inverse navbar-custom">
                    <div class="container-fluid">
                         <div class="navbar-header">
