--- a/Projects.html
+++ b/Projects.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <br>
-        <div class="row">
+        <div class="row" style="background-color:lavenderblush;">
            <div class="col-sm-6">       
                 <div class="well">
                   <h2><b>Mosaic Creator</b></h2>
@@ -115,7 +115,7 @@
             </div>
         </div>    
         <br>
-        <div class="row">
+        <div class="row" style="background-color:lavender;">
            <div class="col-sm-6">       
                 <div class="well">
                   <h2><b>Space Invaders Game</b></h2>
@@ -128,7 +128,7 @@
         </div>    
         
         <div class="row">
-           <div class="col-sm-6">       
+           <div class="col-sm-6" style="background-color:lavenderblush;">       
                 <div class="well">
                   <h2><b>Plannit</b></h2>
                    <p style="line-height: 1.8;">This is a website me and group created for my web programming class. I was the tea leader of a group of six people. 
@@ -137,7 +137,7 @@
            </div>    
         </div>
         
-        <div class="row">
+        <div class="row" style="background-color:lavender;">
            <div class="col-sm-6">       
                 <div class="well">
                   <h2><b>3D Carnival Game</b></h2>
