--- a/Projects.html
+++ b/Projects.html
@@ -109,7 +109,8 @@
               <h2 style="margin-left:10px;"><b>Mosaic Creator</b></h2>
                <p style="line-height: 1.8; margin-left:10px;">Using java, I created a function that makes image mosaics from a large number of smaller images. 
                A product of the code can be seen in my profile picture. In the link <a href="https://github.com/mattncc1701/Image-Effects" target="_blank">
-               provided</a>, the code can also create blurring effects, sharpening effects, and contrast changes.</p>
+               provided</a>, the code can also create blurring effects, sharpening effects, and contrast changes. The image of the mona
+               lisa provided shows what my program can do.</p>
            </div>
            
            <div class="col-sm-1"></div>
@@ -121,7 +122,9 @@
                <p style="line-height: 1.8; margin-left:10px;">Using java, I recreated the old arcade game space invaders. In past summers I taught
                a free java programming course using this program. Each week I would introduce new concepts about java and
                let high school kids who were taking this class fill in the code to this game. By the end of the class
-               the students would have a firm knowledge of java and will have programmed much of the game Space Invaders.</p>
+               the students would have a firm knowledge of java and will have programmed much of the game Space Invaders. The image
+               shown is a snap shot of my game. I'm in the process of converting my code into a java applet so you can play it on
+               my website.</p>
            </div> 
             <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
@@ -141,8 +144,9 @@
            <div class="col-sm-1"></div>
            <div class="col-sm-4">   
               <h2 style="margin-left:10px;"><b>Plannit</b></h2>
-               <p style="line-height: 1.8; margin-left:10px;">This is a website me and group created for my web programming class. I was the tea leader of a group of six people. 
-               It is a customization planner app that is built using the mean stack which consists of Mongodb, Express, Angular, and Nodejs. </p>
+               <p style="line-height: 1.8; margin-left:10px;">This is a website me and group created for my web programming class. I was the team leader of a group of six people. 
+               It is a customization planner app that is built using the mean stack which consists of Mongodb, Express, Angular, and Nodejs. The
+               image provided was our team logo that I created.</p>
            </div>    
            <div class="col-sm-1"></div>
         </div>
@@ -152,7 +156,8 @@
            <div class="col-sm-4">       
               <h2 style="margin-left:10px;"><b>3D Carnival Game</b></h2>
                <p style="line-height: 1.8; margin-left:10px;">Using OpenGL in Java, I created a 3D Carnival Games system consisting
-               of three games Duck Shooter, Balloon popper, and water gun shooter.</p>
+               of three games Duck Shooter, Balloon popper, and water gun shooter. The image provded is a snap shot of
+               the duck shooter game I created.</p>
            </div>
            <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
