--- a/Projects.html
+++ b/Projects.html
@@ -30,7 +30,7 @@
         </style>
         
         <div class="jumbotron_background"> 
-        <body>
+        <body style="overflow-x:hidden;">
             <div class="jumbotron" style="background-color:#99bbff; margin-bottom:0px;">
               <h1 style="margin-left:30px;">Projects</h1>
             </div>
