--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </style>
         
         <div class="jumbotron_background">   
-        <body>
+        <body  style="overflow-x:hidden;">
             <div class="jumbotron" style="background-color: #99bbff;">
                 <div class="row">
                     <div class="col-sm-10">
