--- a/Interests.html
+++ b/Interests.html
@@ -36,7 +36,7 @@
         </style>
         
         <div class="jumbotron_background">   
-        <body>
+        <body  style="overflow-x:hidden;">
             <div class="jumbotron" style="background-color:#99bbff;">
               <h1 style="padding-left:30px;">Interests</h1>
             </div>  
